satnogs-client: Fix mount module FQDN
Fixes #116.

Signed-off-by: Fabian P. Schmidt <kerel@mailbox.org>

--- a/roles/satnogs_client/tasks/main.yml
+++ b/roles/satnogs_client/tasks/main.yml
@@ -109,7 +109,7 @@
   notify:
     - Restart satnogs-client service
 - name: Use tmpfs for state directory
-  ansible.builtin.mount:
+  ansible.posix.mount:
     path: '{{ satnogs_client_state_dir }}'
     src: 'tmpfs'
     fstype: 'tmpfs'
