--- a/roles/satnogs_client/vars/main.yml
+++ b/roles/satnogs_client/vars/main.yml
@@ -4,29 +4,33 @@ package_delay: '1'
 satnogs_client_name: 'satnogs-client'
 satnogs_client_user: 'satnogs'
 satnogs_client_pypi:
-  - name: 'APScheduler==3.6.3'
-  - name: 'certifi==2020.11.8'
-  - name: 'chardet==3.0.4'
-  - name: 'cycler==0.10.0'
-  - name: 'decorator==4.4.2'
-  - name: 'ephem==3.7.7.1'
-  - name: 'gps==3.19'
-  - name: 'h5py==2.10.0'
-  - name: 'idna==2.10'
-  - name: 'kiwisolver==1.3.1'
-  - name: 'matplotlib==3.3.2'
-  - name: 'numpy==1.16.6'
-  - name: 'Pillow==8.0.1'
-  - name: 'pyparsing==2.4.7'
-  - name: 'python-dateutil==2.8.1'
-  - name: 'python-dotenv==0.14.0'
-  - name: 'pytz==2020.4'
-  - name: 'requests==2.24.0'
-  - name: 'sentry-sdk==0.18.0'
-  - name: 'six==1.15.0'
-  - name: 'tzlocal==2.1'
-  - name: 'urllib3==1.25.11'
-  - name: 'validators==0.18.1'
+  # This list is a copy of satnogs-client:requirements.txt
+  - name: 'APScheduler==3.9.1'
+  - name: 'Pillow==9.2.0'
+  - name: 'certifi==2022.6.15'
+  - name: 'charset-normalizer==2.1.0'
+  - name: 'cycler==0.11.0'
+  - name: 'decorator==5.1.1'
+  - name: 'ephem==4.1.3'
+  - name: 'fonttools==4.34.4'
+  - name: 'h5py==3.7.0'
+  - name: 'idna==3.3'
+  - name: 'kiwisolver==1.4.4'
+  - name: 'matplotlib==3.5.2'
+  - name: 'numpy==1.23.1'
+  - name: 'packaging==21.3'
+  - name: 'pyparsing==3.0.9'
+  - name: 'python-dateutil==2.8.2'
+  - name: 'python-dotenv==0.20.0'
+  - name: 'pytz-deprecation-shim==0.1.0.post0'
+  - name: 'pytz==2022.1'
+  - name: 'requests==2.28.1'
+  - name: 'sentry-sdk==1.6.0'
+  - name: 'six==1.16.0'
+  - name: 'tzdata==2022.1'
+  - name: 'tzlocal==4.2'
+  - name: 'urllib3==1.26.10'
+  - name: 'validators==0.20.0'
 satnogs_client_packages:
   - name: 'git'
   - name: 'pkg-config'
