--- a/roles/satnogs_client/vars/main.yml
+++ b/roles/satnogs_client/vars/main.yml
@@ -3,34 +3,6 @@ package_retries: '3'
 package_delay: '1'
 satnogs_client_name: 'satnogs-client'
 satnogs_client_user: 'satnogs'
-satnogs_client_pypi:
-  # This list is a copy of satnogs-client:requirements.txt
-  - name: 'APScheduler==3.9.1'
-  - name: 'Pillow==9.2.0'
-  - name: 'certifi==2022.6.15'
-  - name: 'charset-normalizer==2.1.0'
-  - name: 'cycler==0.11.0'
-  - name: 'decorator==5.1.1'
-  - name: 'ephem==4.1.3'
-  - name: 'fonttools==4.34.4'
-  - name: 'h5py==3.7.0'
-  - name: 'idna==3.3'
-  - name: 'kiwisolver==1.4.4'
-  - name: 'matplotlib==3.5.2'
-  - name: 'numpy==1.23.1'
-  - name: 'packaging==21.3'
-  - name: 'pyparsing==3.0.9'
-  - name: 'python-dateutil==2.8.2'
-  - name: 'python-dotenv==0.20.0'
-  - name: 'pytz-deprecation-shim==0.1.0.post0'
-  - name: 'pytz==2022.1'
-  - name: 'requests==2.28.1'
-  - name: 'sentry-sdk==1.6.0'
-  - name: 'six==1.16.0'
-  - name: 'tzdata==2022.1'
-  - name: 'tzlocal==4.2'
-  - name: 'urllib3==1.26.10'
-  - name: 'validators==0.20.0'
 satnogs_client_packages:
   - name: 'git'
   - name: 'pkg-config'
@@ -39,6 +11,15 @@ satnogs_client_packages:
   - name: 'libatlas3-base'
   - name: 'python3-gps'
   - name: 'python3-libhamlib2'
+satnogs_client_pypi: >-
+  {{
+  lookup('ansible.builtin.file', 'requirements.txt').splitlines() |
+  map('trim') |
+  map('regex_search', '^(?!#).*$') |
+  select('string') |
+  reject('eq', '') |
+  list
+  }}
 satnogs_client_url_unstable: 'git+https://gitlab.com/librespacefoundation/satnogs/satnogs-client.git@master'
 satnogs_client_state_dir: '/tmp/.satnogs'
 satnogs_client_settings:
