--- a/roles/satnogs_setup/vars/main.yml
+++ b/roles/satnogs_setup/vars/main.yml
@@ -21,9 +21,12 @@ satnogs_setup_packages:
   - name: 'virtualenv'
   - name: 'python3-apt'
   - name: 'dialog'
-satnogs_setup_satnogs_config_pypi:
-  - name: 'psutil==5.5.1'
-  - name: 'python-dotenv==0.14.0'
-  - name: 'pythondialog==3.5.1'
-  - name: 'PyYAML==5.3.1'
-  - name: 'setuptools==50.3.2'
+satnogs_setup_satnogs_config_pypi: >-
+  {{
+  lookup('ansible.builtin.file', 'requirements.txt').splitlines() |
+  map('trim') |
+  map('regex_search', '^(?!#).*$') |
+  select('string') |
+  reject('eq', '') |
+  list
+  }}
