packages: Install all packages in one shot
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/common/tasks/packages.yml
+++ b/roles/common/tasks/packages.yml
@@ -1,10 +1,9 @@
 ---
 - name: Install packages
   ansible.builtin.package:
-    name: '{{ item }}'
+    name: '{{ packages }}'
     state: 'present'
   become: true
-  with_items: '{{ packages }}'
   register: res
   until: res is success
   retries: '{{ package_retries }}'
