--- a/roles/satnogs_setup/vars/main.yml
+++ b/roles/satnogs_setup/vars/main.yml
@@ -13,7 +13,7 @@ satnogs_setup_satnogs_config_config_file: '/etc/ansible/host_vars/localhost'
 satnogs_setup_packages:
   - name: >-
       {{
-      "python3-apt" if ansible_lsb.codename == "bullseye"
+      "python3-apt" if ansible_distribution_release == "bullseye"
       else "python-apt"
       }}
   - name: 'git'
