satnogs-setup: Add missing dependency of 'satnogs-config'
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/satnogs_setup/vars/main.yml
+++ b/roles/satnogs_setup/vars/main.yml
@@ -19,6 +19,7 @@ satnogs_setup_packages:
   - name: 'git'
   - name: 'needrestart'
   - name: 'virtualenv'
+  - name: 'lsb-release'
   - name: 'python3-apt'
   - name: 'dialog'
 satnogs_setup_satnogs_config_pypi: >-
