Revert "Use Ansible to detect release information"
This reverts commit 98af9e7c641200d6b3b271f13b2586f217ce325c.

Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/common/tasks/apt.yml
+++ b/roles/common/tasks/apt.yml
@@ -20,7 +20,7 @@
     name:
       - >-
         {{
-        "python3-apt" if ansible_distribution_release == "bullseye"
+        "python3-apt" if ansible_lsb.codename == "bullseye"
         else "python-apt"
         }}
       - 'gnupg'
