satnogs-radio: Blacklist all RTL-SDR modules
Fixes: #124

Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/satnogs_radio/vars/main.yml
+++ b/roles/satnogs_radio/vars/main.yml
@@ -2,7 +2,9 @@
 package_retries: '3'
 package_delay: '1'
 satnogs_radio_blacklist_modules:
+  - 'rtl2832_sdr'
   - 'dvb_usb_rtl28xxu'
+  - 'rtl2832'
 satnogs_radio_packages:
   - name: 'soapysdr-tools'
 default_satnogs_radio_flowgraphs_version: '1.4-1'
