Prepare for migration to Docker
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/satnogs.yml
+++ b/satnogs.yml
@@ -1,9 +1,12 @@
 ---
-- hosts: localhost
+- hosts: satnogs
   roles:
     - role: common
       tags:
         - common
+    - role: docker_engine
+      tags:
+        - docker_engine
     - role: satnogs
       tags:
         - satnogs
