--- a/site.yml
+++ b/site.yml
@@ -1,7 +1,2 @@
 ---
-- import_playbook: satnogs-setups.yml
-- import_playbook: satnogs-clients.yml
-- import_playbook: satnogs-radios.yml
-- import_playbook: hamlib-utils.yml
-- import_playbook: snmpds.yml
-- import_playbook: gpsds.yml
+- import_playbook: satnogs.yml
