Use proper FQCNs
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/satnogs/tasks/main.yml
+++ b/roles/satnogs/tasks/main.yml
@@ -1,3 +1,3 @@
 ---
-- import_tasks: cleanup.yml
-- import_tasks: sdr.yml
+  ansible.builtin.import_tasks: cleanup.yml
+  ansible.builtin.import_tasks: sdr.yml
