--- a/roles/docker_engine/tasks/main.yml
+++ b/roles/docker_engine/tasks/main.yml
@@ -1,4 +1,5 @@
 ---
 - import_tasks: debian.yml
+  ansible.builtin.import_tasks: debian.yml
   when: ansible_distribution in ('Debian')
 # Clean up of images, volumes, networks etc.
