Add missing names to tasks
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/docker_engine/tasks/main.yml
+++ b/roles/docker_engine/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- import_tasks: debian.yml
+- name: Import tasks debian
   ansible.builtin.import_tasks: debian.yml
   when: ansible_distribution in ('Debian')
 # Clean up of images, volumes, networks etc.
