--- a/roles/docker_engine/vars/main.yml
+++ b/roles/docker_engine/vars/main.yml
@@ -3,5 +3,6 @@ package_retries: '3'
 package_delay: '1'
 docker_compose_virtualenv: '/usr/local/share/virtualenvs/docker-compose'
 docker_compose_version: '1.29.2'
+docker_version: '6.1.3'
 docker_default:
   log_driver: 'journald'
