--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
-/.vagrant/
+/.vagrant/*
+!/.vagrant/provisioners/
+/.vagrant/provisioners/*
+!/.vagrant/provisioners/ansible/
+/.vagrant/provisioners/ansible/*
+!/.vagrant/provisioners/ansible/inventory
+/.vagrant/provisioners/ansible/inventory/vagrant_ansible_inventory
 /production/
 /site.retry
