--- a/.vagrant/provisioners/ansible/inventory/group_vars/satnogses/satnogs.yml
+++ b/.vagrant/provisioners/ansible/inventory/group_vars/satnogses/satnogs.yml
@@ -8,8 +8,8 @@ satnogs_station_id: '99999'
 satnogs_station_lat: '37.971'
 satnogs_station_lon: '23.725'
 
-hamlib_utils_rot_enabled: true
-hamlib_utils_rot_opts: '-m 1'
+rotctld_enabled: true
+rotctld_model: '1'
 
 snmpd_enabled: true
 gpsd_enabled: true
