Fix missing 'rotctld' container parameters
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/satnogs/vars/main/compose-satnogs.yml
+++ b/roles/satnogs/vars/main/compose-satnogs.yml
@@ -29,6 +29,10 @@ compose_satnogs_params:
     name: 'satnogs_rigctld'
     uid: '999'
     gid: '999'
+  rotctld:
+    name: 'satnogs_rotctld'
+    uid: '999'
+    gid: '999'
   satnogs_client:
     name: 'satnogs_satnogs-client'
     uid: '999'
