Fix playbook used by 'ansible-pull'
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/local.yml
+++ b/local.yml
@@ -1,9 +1,2 @@
 ---
-- hosts: localhost
-  roles:
-    - role: common
-      tags:
-        - common
-    - role: satnogs
-      tags:
-        - satnogs
+- import_playbook: satnogses.yml
