Install only Docker engine
No need to install 'docker-compose' system package. We install it in a
virtualenv.

Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/docker_engine/tasks/debian.yml
+++ b/roles/docker_engine/tasks/debian.yml
@@ -1,11 +1,8 @@
 ---
 - name: Install Docker on Debian
   ansible.builtin.apt:
-    name: '{{ item }}'
+    name: 'docker.io'
     state: 'present'
-  loop:
-    - 'docker.io'
-    - 'docker-compose'
   register: res
   until: res is success
   retries: '{{ package_retries }}'
