Pin 'docker-compose' dependencies
Increase reproducibility and unintended deviations by pinning
'docker-compose' dependencies.

Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/docker_engine/tasks/debian.yml
+++ b/roles/docker_engine/tasks/debian.yml
@@ -48,22 +48,11 @@
     state: 'absent'
   when: res_system_python_version.stdout != res_virtualenv_python_version.stdout
   become: true
-- name: Install Docker in virtualenv
-  ansible.builtin.pip:
-    name: 'docker'
-    version: '{{ docker_version }}'
-    state: 'present'
-    virtualenv: '{{ docker_compose_virtualenv }}'
-  register: res
-  until: res is success
-  retries: '{{ package_retries }}'
-  delay: '{{ package_delay }}'
-  become: true
 - name: Install Docker Compose in virtualenv
   ansible.builtin.pip:
-    name: 'docker-compose'
-    version: '{{ docker_compose_version }}'
+    name: '{{ lookup("ansible.builtin.vars", "docker_compose_packages_" + ansible_distribution_release) }}'
     state: 'present'
+    extra_args: '--no-deps'
     virtualenv: '{{ docker_compose_virtualenv }}'
   register: res
   until: res is success
