--- a/roles/docker_engine/vars/main.yml
+++ b/roles/docker_engine/vars/main.yml
@@ -2,7 +2,32 @@
 package_retries: '3'
 package_delay: '1'
 docker_compose_virtualenv: '/usr/local/share/virtualenvs/docker-compose'
-docker_compose_version: '1.29.2'
-docker_version: '6.1.3'
+docker_compose_packages_bookworm:
+  - 'attrs==23.2.0'
+  - 'bcrypt==4.1.2'
+  - 'certifi==2024.2.2'
+  - 'cffi==1.16.0'
+  - 'charset-normalizer==3.3.2'
+  - 'cryptography==42.0.3'
+  - 'distro==1.9.0'
+  - 'docker==6.1.3'
+  - 'docker-compose==1.29.2'
+  - 'dockerpty==0.4.1'
+  - 'docopt==0.6.2'
+  - 'idna==3.6'
+  - 'jsonschema==3.2.0'
+  - 'packaging==23.2'
+  - 'paramiko==3.4.0'
+  - 'pycparser==2.21'
+  - 'PyNaCl==1.5.0'
+  - 'pyrsistent==0.20.0'
+  - 'python-dotenv==0.21.1'
+  - 'PyYAML==5.3.1'
+  - 'requests==2.31.0'
+  - 'six==1.16.0'
+  - 'texttable==1.7.0'
+  - 'urllib3==2.2.1'
+  - 'websocket-client==0.59.0'
+docker_compose_packages_bullseye: '{{ docker_compose_packages_bookworm }}'
 docker_default:
   log_driver: 'journald'
