Add missing RTL-SDR udev rules
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/satnogs/tasks/sdr.yml
+++ b/roles/satnogs/tasks/sdr.yml
@@ -1,4 +1,12 @@
 ---
+- name: Add RTL-SDR udev rules
+  ansible.builtin.copy:
+    src: etc/udev/rules.d/rtl-sdr.rules
+    dest: /etc/udev/rules.d/rtl-sdr.rules
+    mode: '644'
+  become: true
+  notify:
+    - Retrigger udev devices
 - name: Add LimeSDR udev rules
   ansible.builtin.copy:
     src: etc/udev/rules.d/64-limesuite.rules
