Add support for Debian Bookworm
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/common/vars/main.yml
+++ b/roles/common/vars/main.yml
@@ -9,6 +9,10 @@ lsb_compatibility:
     codename: 'bullseye'
   - id: 'Raspbian'
     codename: 'bullseye'
+  - id: 'Debian'
+    codename: 'bookworm'
+  - id: 'Raspbian'
+    codename: 'bookworm'
 package_retries: '3'
 package_delay: '1'
 packages:
