--- a/roles/docker_engine/vars/main.yml
+++ b/roles/docker_engine/vars/main.yml
@@ -29,5 +29,35 @@ docker_compose_packages_bookworm:
   - 'urllib3==2.2.1'
   - 'websocket-client==0.59.0'
 docker_compose_packages_bullseye: '{{ docker_compose_packages_bookworm }}'
+docker_compose_packages_buster:
+  - 'attrs==23.2.0'
+  - 'bcrypt==4.1.2'
+  - 'cached-property==1.5.2'
+  - 'certifi==2024.2.2'
+  - 'cffi==1.15.1'
+  - 'charset-normalizer==3.3.2'
+  - 'cryptography==42.0.3'
+  - 'distro==1.9.0'
+  - 'docker==6.1.3'
+  - 'docker-compose==1.29.2'
+  - 'dockerpty==0.4.1'
+  - 'docopt==0.6.2'
+  - 'idna==3.6'
+  - 'importlib-metadata==6.7.0'
+  - 'jsonschema==3.2.0'
+  - 'packaging==23.2'
+  - 'paramiko==3.4.0'
+  - 'pycparser==2.21'
+  - 'PyNaCl==1.5.0'
+  - 'pyrsistent==0.19.3'
+  - 'python-dotenv==0.21.1'
+  - 'PyYAML==5.3.1'
+  - 'requests==2.31.0'
+  - 'six==1.16.0'
+  - 'texttable==1.7.0'
+  - 'typing_extensions==4.7.1'
+  - 'urllib3==2.0.7'
+  - 'websocket-client==0.59.0'
+  - 'zipp==3.15.0'
 docker_default:
   log_driver: 'journald'
