Mount varstate directory as a 'tmpfs'
Fixes #141

Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/satnogs/vars/main/compose-satnogs.yml
+++ b/roles/satnogs/vars/main/compose-satnogs.yml
@@ -82,7 +82,7 @@ compose_satnogs:
         volumes:
           - type: 'tmpfs'
             target: '/tmp'
-          - type: 'volume'
+          - type: 'tmpfs'
             target: '/var/lib/satnogs-client'
           - '/dev/bus/usb:/dev/bus/usb'
         restart: 'always'
